[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/GraphHandling/CustomGraphEdit.gd" type="Script" id=1]

[node name="CustomGraphEdit" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterOfGraph" type="Node2D" parent="."]

[node name="CameraCenterOfGraph" type="Camera2D" parent="CenterOfGraph"]
current = true

[node name="MyGraphNodes" type="Node2D" parent="."]

[node name="Edges" type="Node2D" parent="."]
